<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="1dp">
    <RelativeLayout
        android:id="@+id/root_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <!-- Label URL -->
        <TextView
            android:id="@+id/tvUrlLabel"
            android:text="@string/label"
            android:gravity="start|center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />
    <!-- Input Box URL -->
        <EditText
            android:id="@+id/url_input"
            android:layout_toEndOf="@+id/tvUrlLabel"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="12sp"
            android:layout_width="290dp"
            android:layout_height="32dp"
            android:autofillHints="https://www.youtube.com/watch?v=oUYnZv_G82Q"
            android:gravity="center"
            android:hint="@string/url_streaming"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:padding="0dp"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            />
        <!-- Embed Button -->
        <Button
            android:id="@+id/button_embed"
            android:layout_toEndOf="@+id/url_input"
            android:text="@string/embed_btn"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck"
            />
        <!-- Media3 PlayerView on Center -->
        <androidx.media3.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_below="@+id/button_embed"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:background="#000000"
            app:show_buffering="when_playing"
            app:show_timeout="5000"
            app:show_previous_button="true"
            app:show_next_button="true"
            app:show_rewind_button="true"
            app:show_fastforward_button="true"
            app:show_shuffle_button="false"
            app:show_subtitle_button="true"
            app:show_vr_button="false"
            />
        <!-- Label Selected File -->
        <TextView
            android:id="@+id/textview_filePath"
            android:layout_below="@+id/player_view"
            android:text=""
            android:gravity="start|center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />
        <!-- Open Local Files Button -->
        <Button
            android:id="@+id/button_open_local_files"
            android:layout_below="@+id/textview_filePath"
            android:text="@string/open_local_files"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck"
            />
        <!-- Grant Persisted Tree Uri Permission Button -->
        <Button
            android:id="@+id/button_grant_storage_permission"
            android:layout_below="@+id/button_open_local_files"
            android:text="@string/grant_storage_access_permission"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck"
            />
        <Button
            android:id="@+id/button_grant_manage_app_all_files_access_permission"
            android:layout_below="@+id/button_grant_storage_permission"
            android:text="@string/grant_manage_app_all_files_access_permission"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck"
            />
        <!-- Grant Persisted Tree Uri Permission Button -->
        <Button
            android:id="@+id/button_grant_persisted_tree_uri_permission"
            android:layout_below="@+id/button_grant_manage_app_all_files_access_permission"
            android:text="@string/grant_persisted_tree_uri_permission"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck"
            />

    </RelativeLayout>
</ScrollView>
